# editor

./: .eslintignore  .eslintrc.cjs  .gitignore  .lintstagedrc.js  .npmrc  .prettier.json  CLAUDE.md  Editor-README.md  README.md  README_UNDO_TESTS.md  UPDATE_LOG.md  data.db  diff  electron-builder.yml  electron.vite.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.mjs  tsconfig.json  tsconfig.node.json  vite-page.config.ts  vite.config.ts  vite.config.ts.timestamp-1686381322363-a264b65bc90ad.mjs  vitest.config.ts  白板Diff算法文档.md  白板路径转换算法文档.md
.claude/: settings.local.json
assets/: CodeEditor-18a53271.js  CodeEditor-1cc1146a.js  CodeEditor-1f01a8aa.js  CodeEditor-2bd57e6e.js  CodeEditor-3cdefea9.js  CodeEditor-3f355997.js  CodeEditor-44eba553.js  CodeEditor-5527f9b0.js  CodeEditor-58ef7c95.js  CodeEditor-5f87f118.js  CodeEditor-784e9d33.js  CodeEditor-87abdfbb.js  CodeEditor-dfb7ac55.js  (+887 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  database.rs  main.rs  plugins.rs  state.rs
src-tauri/src/commands/: ali_oss.rs  article.rs  card.rs  daily_note.rs  database.rs  document.rs  file.rs  font.rs  fs_help.rs  history.rs  html_to_markdown.rs  operation.rs  pdf.rs  project.rs  setting.rs  stream_fetch.rs  system.rs  time_record.rs
src-tauri/src/database/: article.rs  card.rs  chat_message.rs  daily_note.rs  document.rs  history.rs  operation.rs  pdf.rs  project.rs  time_record.rs  vec_document.rs  white_board.rs
src-tauri/src/plugins/: article.rs  card.rs  chat_message.rs  daily_note.rs  document.rs  embedding.rs  llm.rs  pdf.rs  project.rs  time_record.rs  vec_document.rs  voice_copy.rs  white_board.rs
(+2721 files in other folders)
